--- a/religious_studies_infographic.html
+++ b/religious_studies_infographic.html
@@ -6,21 +6,128 @@
   <title>Anatomy of a Degree Path Infographic</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; background: #f0f2f5; color: #333; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #eaf2f8;
+      color: #333;
+      font-size: 16px;
+      transition: all 0.3s ease-in-out;
+    }
     .infographic { display: grid; grid-template-columns: 1fr; gap: 20px; padding: 20px; max-width: 900px; margin: auto; }
-    .section { background: white; padding: 24px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.05); }
-    .section h2 { margin-top: 0; color: #005f73; font-size: 1.6em; }
+    .section {
+      background: white;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      transition: all 0.3s ease-in-out;
+    }
+    .section:hover {
+        box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+    }
+    .section h2 {
+      margin-top: 0;
+      color: #0077b6;
+      font-size: 1.8em;
+      font-weight: 700;
+    }
     .section p { line-height: 1.5; margin: 10px 0; }
-    .flex { display: flex; align-items: center; gap: 15px; margin: 10px 0; }
-    .icon { font-size: 32px; color: #005f73; }
+    .flex { position: relative; display: flex; align-items: center; gap: 15px; margin: 10px 0; }
+    .icon {
+      font-size: 32px;
+      color: #0077b6;
+    }
     .careers { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); gap: 20px; }
-    .career-path { padding: 16px; border-radius: 8px; background: #f8f9fa; transition: transform 0.3s, box-shadow 0.3s; }
+    .career-path {
+      padding: 16px;
+      border-radius: 8px;
+      background: #f0f8ff;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
     .career-path:hover { transform: translateY(-4px); box-shadow: 0 6px 12px rgba(0,0,0,0.1); }
     .career-details { margin-top: 12px; padding: 12px; background: #e9ecef; border-radius: 8px; }
     .citation { font-size: 0.9em; margin: 12px 0 0; color: #555; }
     footer { text-align: center; margin-top: 20px; }
+
+    /* Tooltip styles */
+    .tooltiptext {
+      visibility: hidden;
+      width: 220px;
+      background-color: #555;
+      color: #fff;
+      text-align: center;
+      border-radius: 6px;
+      padding: 5px 0;
+      position: absolute;
+      z-index: 1;
+      bottom: 125%;
+      left: 50%;
+      margin-left: -110px;
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .flex:hover .tooltiptext {
+      visibility: visible;
+      opacity: 1;
+    }
+
+    /* Read more button styles */
+    .read-more-btn {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 10px;
+    }
+
+    .career-details-more {
+        display: none;
+        margin-top: 10px;
+    }
+
+    /* Skills section styles */
+    .skills-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 15px;
+        margin-top: 20px;
+    }
+
+    .skill {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .skill p {
+        flex: 0 0 150px; /* Fixed width for skill names */
+    }
+
+    .progress-bar {
+        flex-grow: 1;
+        background-color: #e9ecef;
+        border-radius: 5px;
+        height: 20px;
+        overflow: hidden;
+    }
+
+    .progress-bar div {
+        background-color: #0077b6;
+        height: 100%;
+        width: 0; /* Initial width */
+        border-radius: 5px;
+        animation: fill-bar 2s ease-in-out forwards;
+    }
+
+    @keyframes fill-bar {
+        from { width: 0; }
+    }
   </style>
 </head>
 <body>
@@ -28,7 +135,7 @@
     <!-- Introduction -->
     <div class="section">
       <h2>Introduction</h2>
-      <p>As I conclude my undergraduate journey in Religious Studies, I’ve come to value how this discipline integrates history, philosophy, and human experience. This capstone infographic presents my personal insights—why I chose this path, the rigorous skills I’ve developed, and the professional doors this degree opens.</p>
+      <p>As I conclude my undergraduate journey in Religious Studies, I've come to value how this discipline integrates history, philosophy, and human experience. This capstone infographic presents my personal insights—why I chose this path, the rigorous skills I've developed, and the professional doors this degree opens.</p>
     </div>
 
     <!-- Academic Journey -->
@@ -45,10 +152,41 @@
     <!-- Core Strengths -->
     <div class="section">
       <h2>Core Strengths</h2>
-      <div class="flex"><div class="icon">📖</div><p><strong>Critical Reading:</strong> Decoding complex texts to reveal deeper meanings.</p></div>
-      <div class="flex"><div class="icon">🖋️</div><p><strong>Academic Writing:</strong> Crafting clear, persuasive arguments grounded in research.</p></div>
-      <div class="flex"><div class="icon">🎧</div><p><strong>Empathetic Listening:</strong> Honing active listening to foster inclusive dialogue.</p></div>
-      <div class="flex"><div class="icon">💡</div><p><strong>Creative Thinking:</strong> Designing innovative projects, from digital exhibits to community events.</p></div>
+      <div class="flex"><div class="icon">📖</div><p><strong>Critical Reading:</strong> Decoding complex texts to reveal deeper meanings.</p><span class="tooltiptext">Expert in analyzing complex texts, identifying underlying assumptions, and evaluating arguments from diverse perspectives.</span></div>
+      <div class="flex"><div class="icon">🖋️</div><p><strong>Academic Writing:</strong> Crafting clear, persuasive arguments grounded in research.</p><span class="tooltiptext">Skilled in formulating research questions, synthesizing sources, and constructing coherent, evidence-based essays.</span></div>
+      <div class="flex"><div class="icon">🎧</div><p><strong>Empathetic Listening:</strong> Honing active listening to foster inclusive dialogue.</p><span class="tooltiptext">Adept at facilitating discussions, understanding different viewpoints, and creating a respectful environment for exchange.</span></div>
+      <div class="flex"><div class="icon">💡</div><p><strong>Creative Thinking:</strong> Designing innovative projects, from digital exhibits to community events.</p><span class="tooltiptext">Experienced in developing and executing creative projects that translate academic insights into accessible, engaging formats.</span></div>
+    </div>
+
+    <!-- Key Skills -->
+    <div class="section">
+        <h2>Key Skills</h2>
+        <div class="skills-container">
+            <div class="skill">
+                <p>Critical Analysis</p>
+                <div class="progress-bar">
+                    <div style="width: 90%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <p>Research</p>
+                <div class="progress-bar">
+                    <div style="width: 85%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <p>Project Management</p>
+                <div class="progress-bar">
+                    <div style="width: 75%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <p>Public Speaking</p>
+                <div class="progress-bar">
+                    <div style="width: 80%;"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Career Paths -->
@@ -57,19 +195,23 @@
       <div class="careers">
         <div class="career-path">
           <div class="flex"><div class="icon">🏫</div><p><strong>Educator & Scholar</strong><br>Develop courses, mentor students, publish research.</p></div>
-          <div class="career-details"><p>I envision teaching at the secondary or collegiate level, designing curricula that integrate diverse perspectives and guiding independent research projects.</p></div>
+          <button class="read-more-btn">Read More</button>
+          <div class="career-details-more"><p>I envision teaching at the secondary or collegiate level, designing curricula that integrate diverse perspectives and guiding independent research projects.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🤝</div><p><strong>Community Leader</strong><br>Manage outreach programs, facilitate dialogues.</p></div>
-          <div class="career-details"><p>By leading nonprofit initiatives, I aim to apply ethical frameworks to social challenges, organize intercultural forums, and empower marginalized groups.</p></div>
+          <button class="read-more-btn">Read More</button>
+          <div class="career-details-more"><p>By leading nonprofit initiatives, I aim to apply ethical frameworks to social challenges, organize intercultural forums, and empower marginalized groups.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🏛️</div><p><strong>Cultural Curator</strong><br>Curate exhibits, preserve heritage.</p></div>
-          <div class="career-details"><p>Working in museums or archives, I plan to create immersive displays, interpret artifacts, and engage the public in meaningful historical narratives.</p></div>
+          <button class="read-more-btn">Read More</button>
+          <div class="career-details-more"><p>Working in museums or archives, I plan to create immersive displays, interpret artifacts, and engage the public in meaningful historical narratives.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🕊️</div><p><strong>Chaplain & Counselor</strong><br>Provide spiritual guidance and support.</p></div>
-          <div class="career-details"><p>As a chaplain, I would offer compassionate care in healthcare or military settings, leading rituals and advising individuals in crisis.</p></div>
+          <button class="read-more-btn">Read More</button>
+          <div class="career-details-more"><p>As a chaplain, I would offer compassionate care in healthcare or military settings, leading rituals and advising individuals in crisis.</p></div>
         </div>
       </div>
     </div>
@@ -77,7 +219,7 @@
     <!-- Community Impact -->
     <div class="section">
       <h2>Community Impact</h2>
-      <p>One highlight was co-founding a food pantry rooted in interfaith collaboration. By integrating ritual study with service, we provided meals to 200 families and fostered lasting community bonds.</p>
+      <p>One highlight was starting a small bible study group. This experience allowed me to apply my academic knowledge in a practical setting, fostering a space for open discussion and mutual learning.</p>
     </div>
 
     <!-- Reflection & Motivation -->
@@ -89,16 +231,32 @@
     <!-- Conclusion -->
     <div class="section">
       <h2>Conclusion</h2>
-      <p>My Religious Studies capstone reflects a journey of critical inquiry and creative practice. Equipped with analytical rigor, communication expertise, and ethical insight, I’m prepared to contribute meaningfully to academia, community, and beyond.</p>
+      <p>My Religious Studies capstone reflects a journey of critical inquiry and creative practice. Equipped with analytical rigor, communication expertise, and ethical insight, I'm prepared to contribute meaningfully to academia, community, and beyond.</p>
     </div>
 
     <!-- Works Cited -->
     <footer>
       <h2>Works Cited</h2>
-      <div class="citation">American Academy of Religion. “What Can I Do with a Religious Studies Degree?” <em>American Academy of Religion</em>, 2020, www.aarweb.org/resources/what-can-i-do-with-a-religious-studies-degree.</div>
-      <div class="citation">National Education Association. “Benefits of a Humanities Education.” <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
-      <div class="citation">Canva. “Infographic Templates.” <em>Canva</em>, 2025, www.canva.com/templates/infographics/.</div>
+      <div class="citation">American Academy of Religion. "What Can I Do with a Religious Studies Degree?" <em>American Academy of Religion</em>, 2020, www.aarweb.org/resources/what-can-i-do-with-a-religious-studies-degree.</div>
+      <div class="citation">National Education Association. "Benefits of a Humanities Education." <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
+      <div class="citation">Canva. "Infographic Templates." <em>Canva</em>, 2025, www.canva.com/templates/infographics/.</div>
     </footer>
   </div>
+
+  <script>
+    const readMoreBtns = document.querySelectorAll('.read-more-btn');
+    readMoreBtns.forEach(btn => {
+      btn.addEventListener('click', () => {
+        const moreInfo = btn.nextElementSibling;
+        if (moreInfo.style.display === 'none' || moreInfo.style.display === '') {
+          moreInfo.style.display = 'block';
+          btn.textContent = 'Read Less';
+        } else {
+          moreInfo.style.display = 'none';
+          btn.textContent = 'Read More';
+        }
+      });
+    });
+  </script>
 </body>
 </html>
