--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+%%html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,6 +34,12 @@
       color: #0077b6;
       font-size: 1.8em;
       font-weight: 700;
+    }
+    .section h3 {
+        color: #0077b6;
+        font-size: 1.4em;
+        font-weight: 700;
+        margin-top: 20px;
     }
     .section p { line-height: 1.5; margin: 10px 0; }
     .flex { position: relative; display: flex; align-items: center; gap: 15px; margin: 10px 0; }
@@ -135,7 +142,7 @@
     <!-- Introduction -->
     <div class="section">
       <h2>Introduction</h2>
-      <p>As I conclude my undergraduate journey in Religious Studies, I've come to value how this discipline integrates history, philosophy, and human experience. This capstone infographic presents my personal insights—why I chose this path, the rigorous skills I've developed, and the professional doors this degree opens.</p>
+      <p>In a world saturated with information yet starved for wisdom, a degree in Religious Studies and Philosophy offers more than just a credential—it provides a moral compass and a critical lens to navigate complex global challenges. While other degrees teach you what to think, this discipline teaches you how to think, fostering unparalleled skills in critical analysis, ethical reasoning, and empathetic leadership. My journey through this field has convinced me that to understand the world, one must first understand the beliefs that shape it; this path is essential for anyone committed to fostering a more just, inclusive, and thoughtful society.</p>
     </div>
 
     <!-- Academic Journey -->
@@ -147,6 +154,8 @@
         <li><strong>Critique:</strong> Compare ethical frameworks across cultures.</li>
         <li><strong>Reflect:</strong> Connect scholarly theory with real-world practice.</li>
       </ul>
+      <h3>Developing Essential Skills</h3>
+      <p>The study of religion and philosophy is a rigorous exercise in intellectual and emotional growth. By examining the foundational texts and beliefs of diverse cultures, I learned to deconstruct complex arguments, identify underlying biases, and appreciate the nuances of human experience. This process cultivated a deep sense of empathy, enabling me to engage with different worldviews respectfully and critically. The ability to navigate these diverse perspectives is not just an academic skill—it is essential for effective communication and collaboration in any professional setting.</p>
     </div>
 
     <!-- Core Strengths -->
@@ -196,22 +205,22 @@
         <div class="career-path">
           <div class="flex"><div class="icon">🏫</div><p><strong>Educator & Scholar</strong><br>Develop courses, mentor students, publish research.</p></div>
           <button class="read-more-btn">Read More</button>
-          <div class="career-details-more"><p>I envision teaching at the secondary or collegiate level, designing curricula that integrate diverse perspectives and guiding independent research projects.</p></div>
+          <div class="career-details-more"><p>I envision teaching at the secondary or collegiate level, designing curricula that integrate diverse perspectives and guiding independent research projects. My training in critical reading and analysis allows me to effectively interpret complex academic texts and teach students how to engage with challenging ideas. Furthermore, my background in ethical reasoning prepares me to address sensitive topics with nuance and create an inclusive classroom environment.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🤝</div><p><strong>Community Leader</strong><br>Manage outreach programs, facilitate dialogues.</p></div>
           <button class="read-more-btn">Read More</button>
-          <div class="career-details-more"><p>By leading nonprofit initiatives, I aim to apply ethical frameworks to social challenges, organize intercultural forums, and empower marginalized groups.</p></div>
+          <div class="career-details-more"><p>By leading nonprofit initiatives, I aim to apply ethical frameworks to social challenges, organize intercultural forums, and empower marginalized groups. My empathetic listening skills, honed through studying diverse belief systems, are invaluable in building trust and fostering understanding among different community members. I can effectively navigate complex social dynamics and facilitate constructive dialogue to address community needs.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🏛️</div><p><strong>Cultural Curator</strong><br>Curate exhibits, preserve heritage.</p></div>
           <button class="read-more-btn">Read More</button>
-          <div class="career-details-more"><p>Working in museums or archives, I plan to create immersive displays, interpret artifacts, and engage the public in meaningful historical narratives.</p></div>
+          <div class="career-details-more"><p>Working in museums or archives, I plan to create immersive displays, interpret artifacts, and engage the public in meaningful historical narratives. My strong critical reading and research skills enable me to accurately interpret historical and cultural artifacts, ensuring exhibits are informative and engaging. Understanding diverse cultural contexts, gained from my degree, is crucial for presenting artifacts respectfully and accurately to a broad audience.</p></div>
         </div>
         <div class="career-path">
           <div class="flex"><div class="icon">🕊️</div><p><strong>Chaplain & Counselor</strong><br>Provide spiritual guidance and support.</p></div>
           <button class="read-more-btn">Read More</button>
-          <div class="career-details-more"><p>As a chaplain, I would offer compassionate care in healthcare or military settings, leading rituals and advising individuals in crisis.</p></div>
+          <div class="career-details-more"><p>As a chaplain, I would offer compassionate care in healthcare or military settings, leading rituals and advising individuals in crisis. My background in understanding diverse religious and philosophical perspectives allows me to provide sensitive and informed spiritual support to individuals from various backgrounds. My empathetic listening skills are essential for building rapport and offering comfort and guidance during difficult times.</p></div>
         </div>
       </div>
     </div>
@@ -219,7 +228,7 @@
     <!-- Community Impact -->
     <div class="section">
       <h2>Community Impact</h2>
-      <p>One highlight was starting a small bible study group. This experience allowed me to apply my academic knowledge in a practical setting, fostering a space for open discussion and mutual learning.</p>
+      <p>A degree in Religious Studies and Philosophy is not just about academic learning; it’s about applying those insights to build stronger communities. A pivotal experience for me was initiating and leading a small bible study group. This was more than a book club; it was a practical application of my studies in a real-world setting. By facilitating discussions on complex texts, I honed my ability to create a safe and inclusive space for dialogue, where diverse interpretations were welcomed and explored. This experience reinforced the importance of empathetic listening and demonstrated how academic knowledge can be used to foster mutual understanding and build meaningful connections within a community.</p>
     </div>
 
     <!-- Reflection & Motivation -->
@@ -231,15 +240,17 @@
     <!-- Conclusion -->
     <div class="section">
       <h2>Conclusion</h2>
-      <p>My Religious Studies capstone reflects a journey of critical inquiry and creative practice. Equipped with analytical rigor, communication expertise, and ethical insight, I'm prepared to contribute meaningfully to academia, community, and beyond.</p>
+      <p>My Religious Studies capstone reflects a journey of critical inquiry and creative practice. Equipped with analytical rigor, communication expertise, and ethical insight, I’m prepared to contribute meaningfully to academia, community, and beyond.</p>
     </div>
 
     <!-- Works Cited -->
     <footer>
       <h2>Works Cited</h2>
-      <div class="citation">American Academy of Religion. "What Can I Do with a Religious Studies Degree?" <em>American Academy of Religion</em>, 2020, www.aarweb.org/resources/what-can-i-do-with-a-religious-studies-degree.</div>
-      <div class="citation">National Education Association. "Benefits of a Humanities Education." <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
-      <div class="citation">Canva. "Infographic Templates." <em>Canva</em>, 2025, www.canva.com/templates/infographics/.</div>
+      <div class="citation">American Academy of Religion. “What Can I Do with a Religious Studies Degree?” <em>American Academy of Religion</em>, 2020, www.aarweb.org/resources/what-can-i-do-with-a-religious-studies-degree.</div>
+      <div class="citation">National Education Association. “Benefits of a Humanities Education.” <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
+      <div class="citation">Canva. “Infographic Templates.” <em>Canva</em>, 2025, www.canva.com/templates/infographics/.</div>
+      <div class="citation">Said, Edward W. *Orientalism*. Pantheon Books, 1978.</div>
+      <div class="citation">Geertz, Clifford. *The Interpretation of Cultures*. Basic Books, 1973.</div>
     </footer>
   </div>
 
