--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- Introduction -->
     <div class="section">
       <h2>Introduction</h2>
-      <p>In a world saturated with information yet starved for wisdom, a degree in Religious Studies and Philosophy offers more than just a credential—it provides a moral compass and a critical lens to navigate complex global challenges. While other degrees teach you what to think, this discipline teaches you how to think, fostering unparalleled skills in critical analysis, ethical reasoning, and empathetic leadership. My journey through this field has convinced me that to understand the world, one must first understand the beliefs that shape it; this path is essential for anyone committed to fostering a more just, inclusive, and thoughtful society.</p>
+      <p>In a world saturated with information yet starved for wisdom, a degree in Religious Studies and Philosophy offers more than just a credential—it provides a moral compass and a critical lens to navigate complex global challenges. While other degrees teach you what to think, this discipline teaches you *how* to think, fostering unparalleled skills in critical analysis, ethical reasoning, and empathetic leadership. My journey through this field has convinced me that to understand the world, one must first understand the beliefs that shape it; this path is essential for anyone committed to fostering a more just, inclusive, and thoughtful society.</p>
     </div>
 
     <!-- Academic Journey -->
@@ -247,10 +247,9 @@
     <footer>
       <h2>Works Cited</h2>
       <div class="citation">American Academy of Religion. “What Can I Do with a Religious Studies Degree?” <em>American Academy of Religion</em>, 2020, www.aarweb.org/resources/what-can-i-do-with-a-religious-studies-degree.</div>
-      <div class="citation">National Education Association. “Benefits of a Humanities Education.” <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
-      <div class="citation">Canva. “Infographic Templates.” <em>Canva</em>, 2025, www.canva.com/templates/infographics/.</div>
-      <div class="citation">Said, Edward W. *Orientalism*. Pantheon Books, 1978.</div>
       <div class="citation">Geertz, Clifford. *The Interpretation of Cultures*. Basic Books, 1973.</div>
+      <div class="citation">National Education Association. “Benefits of a Humanities Education.” <em>NEA Today</em>, 2019, nea.org/advocating-for-change/new-from-nea/benefits-humanities-education.</div>
+      <div class="citation">Said, Edward W. *Orientalism*. Pantheon Books, 1978.</div>
     </footer>
   </div>
 
